objects/EXPRN__Credit_Policy__c.object
<CustomObject>
    <description>Stores credit policy data</description>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>Experian Credit Policies</relationshipLabel>
        <relationshipName>Credit_Policy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy_Identifier__c</fullName>
        <description>Credit Policy Identifier from BIQ</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy Identifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy_Type__c</fullName>
        <label>Credit Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIQ</fullName>
                </value>
                <value>
                    <fullName>CAPS</fullName>
                </value>
                <value>
                    <fullName>DIQ Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Band_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Band Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>EXPRN__Portfolio__c</referenceTo>
        <relationshipName>Credit_Policy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Option__c</fullName>
        <formula>CASE( EXPRN__Product_and_Options__c , &quot;Decision Band and Premier Profile&quot;, &quot;4.9&quot;, &quot;Decision Band and Intelliscore&quot;, &quot;8.9&quot;,&quot;Decision Band and Business Profile with Score&quot;, &quot;2.9&quot;,&quot;Decision Band Only&quot;,&quot;9&quot;,&quot;Decision Band and Business Profile with Score-Blended&quot;,&quot;3.9&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_and_Options__c</fullName>
        <description>Stores the products and options available while pulling a decisionIQ report.</description>
        <label>Product and Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Band and Premier Profile</fullName>
                    <default>true</default>
                    <label>Decision Band and Premier Profile</label>
                </value>
                <value>
                    <fullName>Decision Band and Intelliscore</fullName>
                </value>
                <value>
                    <fullName>Decision Band and Business Profile with Score</fullName>
                </value>
                <value>
                    <fullName>Decision Band Only</fullName>
                </value>
                <value>
                    <fullName>Decision Band and Business Profile with Score-Blended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Response_Type__c</fullName>
        <description>Determines what kind of information to be pulled when a decisionIQ report is pulled.</description>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DECISION</fullName>
                </value>
                <value>
                    <fullName>DECISION+REPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Account_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Account - 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Account_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Account - 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Account_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Account - 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Lead_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Lead - 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Lead_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Lead - 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Lead_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Lead - 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Opportunity_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Opportunity - 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Opportunity_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Opportunity - 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_UDF_Opportunity_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC UDF Opportunity - 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <label>Scoring Model</label>
        <referenceTo>EXPRN__Scoring_Model__c</referenceTo>
        <relationshipLabel>Experian Credit Policies</relationshipLabel>
        <relationshipName>Credit_Policy</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_10_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 10 Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_1_Description__c</fullName>
        <description>Description about the BIQ UDF Key</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 1 Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_2_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 2 Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UDF_Key_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UDF Key - 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Experian Credit Policy</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <columns>EXPRN__Scoring_Model__c</columns>
        <columns>NAME</columns>
        <columns>EXPRN__Credit_Policy_Type__c</columns>
        <columns>EXPRN__Credit_Policy_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Credit Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>